# StemGNN

./: .gitignore  README.md  main.py  pyproject.toml
models/: base_model.py
notebooks/: prototyping.ipynb
stemgnn/: handler.py
stemgnn/model/: __init__.py  base.py
stemgnn/utils/: math_utils.py
stemgnn/utils/data/: __init__.py  forecast_dataset.py
