[tool.poetry]
name = "stemgnn"
version = "0.1.0"
description = "Spectral Temporal Graph Neural Network (StemGNN in short) for Multivariate Time-series Forecasting"
authors = ["Defu Cao", "Yujing Wang", "Juanyong Duan", "Ce Zhang", "Xia Zhu", "Conguri Huang", "Yunhai Tong", "Bixiong Xu", "Jing Bai", "Jie Tong", "Qi Zhang", "Wouter Doppenberg"]
packages = [
    { include = "stemgnn" }
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
torch = "^1.11.0"
pandas = "^1.4.2"
scipy = "^1.8.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
poethepoet = "^0.10.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.11.0+cu111 -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
